kubernetes/apps/flux-system/konflate/app/httproute-webhook-envoy.yaml
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: konflate-webhook-envoy
spec:
  parentRefs:
  - name: envoy-external
    namespace: network
    sectionName: https
  hostnames:
  - "konflate-hooks.${HOME_DOMAIN}"
  rules:
  - matches:
    - path:
        type: Exact
        value: /hooks
    backendRefs:
    - name: konflate
      port: 8080
