kubernetes/apps/flux-system/konflate/app/webhook-ingress.yaml
# yaml-language-server: $schema=https://k8s-schemas.pages.dev/kubernetes/networking.k8s.io/ingress_v1.json
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: konflate-webhook
  annotations:
    external-dns.alpha.kubernetes.io/target: external.${HOME_DOMAIN}
    nginx.ingress.kubernetes.io/limit-burst-multiplier: "2"
    nginx.ingress.kubernetes.io/limit-rps: "5"
spec:
  ingressClassName: external
  rules:
  - host: konflate-hooks.${HOME_DOMAIN}
    http:
      paths:
      - path: /hooks
        pathType: Exact
        backend:
          service:
            name: konflate
            port:
              name: http
